@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 17Nov2016 Patched IO calls again to save/restore the value of errno twice, before and after calling the real I/O symbol
  * 14Nov2016 Builds additional C/Fortran tracing library by default
  * 14Nov2016 Fixes MPI_Ialltoallv label
  - 08Nov2016 Removed flag -Wall from tests/overhead
